<resources>
    <string name="app_name">Ma Réu</string>
    <string name="avatar_rond">imageRonde</string>
    <string name="nom_de_la_salle">Nom salle</string>
    <string name="heure_de_reunion">Time </string>
    <string name="sujet_de_la_reunion">sujet</string>
    <string name="Email">Saisissez les Mail des participant à cette Réu</string>
    <string name="Dessin_pour_activite_profile">dessin pour la nouvelle activité</string>
    <string name="Poubelle">poubelle</string>
    <string name="Flotingactionbutton">flotingactionbutton</string>
    <string name="Mail_profile">Mail des participant</string>
    <string name="Find_a_date">Date of your Réu</string>
    <string name="Find_houre">Time of your Réu</string>
    <string name="Find_a_date_and_a_houre">Find My Réu</string>
    <string name="Subject">Subject of your Réu</string>
    <string name="button_Date">choisir une date</string>
    <string name="button_haour">choisir une heure</string>
    <string name="Date">Date</string>
    <string name="Heure">heure</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="fragment1">My Réu</string>
    <string name="fragment2">Date</string>
    <string name="fragment3">Place</string>
    <string name="Empty">Tab 2</string>
    <string name="Empty1">Tab 2</string>
    <string name="Empty2">Tab 2</string>
    <string name="Empty3">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <array name="roomms">
        <item></item>
        <item>Paris</item>
        <item>Moscou</item>
        <item>Vienna</item>
        <item>New york</item>
        <item>Barcelona</item>
        <item>Berlin</item>
        <item>London</item>
        <item>Venise</item>
        <item>Laponie</item>
        <item>Pekin</item>
    </array>


</resources>