<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cUI.ui.main.MyMeetinProfile.MyMeetingProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView2"
        android:layout_width="210dp"
        android:layout_height="131dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/Dessin_pour_activite_profile"
        android:src="@drawable/meeting"
        app:layout_constraintBottom_toTopOf="@+id/NamePlace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <TextView
        android:id="@+id/NamePlace"
        android:layout_width="279dp"
        android:layout_height="34dp"
        android:layout_marginBottom="32dp"
        android:textAlignment="center"
        android:hint="@string/nom_de_la_salle"
        app:layout_constraintBottom_toTopOf="@+id/HeureDateMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/HeureDateMeeting"
        android:layout_width="132dp"
        android:layout_height="35dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/heure_de_reunion"
        android:text="@string/heure_de_reunion"
        app:layout_constraintBottom_toTopOf="@+id/Sujet"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textHeure"
        android:layout_width="144dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/Heure"
        android:text="@string/Heure"
        app:layout_constraintStart_toEndOf="@+id/HeureDateMeeting"
        app:layout_constraintTop_toBottomOf="@+id/NamePlace" />

    <TextView
        android:id="@+id/Sujet"
        android:layout_width="286dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/sujet_de_la_reunion"
        android:text="@string/sujet_de_la_reunion"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="@+id/HeureDateMeeting" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="334dp"
        android:layout_height="208dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Sujet"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/Sujet">

        <TextView
            android:id="@+id/Email"
            android:layout_width="281dp"
            android:layout_height="148dp"
            android:layout_margin="8dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/Email"
            android:padding="8dp"
            android:text="@string/Mail_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.576"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Sujet" />
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>