<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_list_user_avatar"
            android:layout_width="75dp"
            android:layout_height="74dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/avatar_rond"
            android:scaleType="centerCrop"
            android:src="@drawable/circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/poubelle"
            android:layout_width="63dp"
            android:layout_height="97dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/Poubelle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toEndOf="@+id/item_list_user_avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.272"
            app:srcCompat="@drawable/icon_delete" />

        <TextView
            android:id="@+id/email"
            android:layout_width="221dp"
            android:layout_height="30dp"
            android:contentDescription="@string/Email"
            android:maxLines="1"
            android:text="@string/Email"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="114dp"
            tools:layout_editor_absoluteY="58dp" />

        <TextView
            android:id="@+id/NomSalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/nom_de_la_salle"
            android:maxLines="1"
            android:text="@string/nom_de_la_salle"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/item_list_user_avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/heure"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:text="@string/heure_de_reunion"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/sujet"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/NomSalle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sujet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/sujet_de_la_reunion"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="284dp"
            tools:layout_editor_absoluteY="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>