<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="cUI.AddMeetingActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="410dp"
        android:layout_height="158dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="168dp">

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="160dp"
                android:layout_height="42dp"
                android:layout_marginTop="52dp"
                android:layout_marginBottom="21dp"
                android:elegantTextHeight="true"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/Date"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textColorHint="@color/rose"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTime"
                app:layout_constraintEnd_toEndOf="@+id/editTextTime"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextTime"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="160dp"
                android:layout_height="41dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/Heure"
                android:importantForAutofill="no"
                android:inputType="time"
                android:textColorHint="@color/rose"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/flotingactionbuttonADD"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/flotingactionbuttonADD"
                android:layout_width="67dp"
                android:layout_height="78dp"
                android:layout_marginEnd="4dp"
                android:clickable="true"
                android:contentDescription="@string/Find_a_date_and_a_houre"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.504"
                app:srcCompat="@android:drawable/ic_search_category_default" />

            <TextView
                android:id="@+id/FindADateAndHoure"
                android:layout_width="293dp"
                android:layout_height="32dp"
                android:contentDescription="@string/Find_a_date_and_a_houre"
                android:elegantTextHeight="true"
                android:fontFamily="@font/paprika"
                android:gravity="center"
                android:text="@string/Find_a_date_and_a_houre"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextDate"
                app:layout_constraintEnd_toStartOf="@+id/flotingactionbuttonADD"
                app:layout_constraintHorizontal_bias="0.205"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.133" />

            <Button
                android:id="@+id/buttonDate"
                android:layout_width="140dp"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/Find_a_date"
                android:labelFor="@+id/Date"
                android:text="@string/button_Date"
                app:iconTint="#00BCD4"
                app:layout_constraintEnd_toEndOf="@+id/buttonHaour"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/buttonHaour"
                app:layout_constraintTop_toBottomOf="@+id/FindADateAndHoure"
                tools:targetApi="o" />

            <Button
                android:id="@+id/buttonHaour"
                android:layout_width="137dp"
                android:layout_height="59dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="16dp"
                android:text="@string/button_haour"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editTextTime"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonDate"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>